--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,8 +1,17 @@
-a {
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-dialog::backdrop {
-  background: rgba(0, 0, 0, 0.35);
-  backdrop-filter: blur(4px);
+/* Fix for scroll bar w/ modals
+*   See: https://github.com/saadeghi/daisyui/issues/3040#issuecomment-2250530354
+*/
+:root:has(
+    :is(
+        .modal-open,
+        .modal:target,
+        .modal-toggle:checked + .modal,
+        .modal[open]
+      )
+  ) {
+  scrollbar-gutter: unset;
 }
